--- a/WinSockServer/WinSockServer.vcxproj
+++ b/WinSockServer/WinSockServer.vcxproj
@@ -14,7 +14,7 @@
     <ProjectGuid>{5D10DBDD-4F47-4F4A-8D0D-2F539AFE709D}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>WinSockServer</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -79,6 +79,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Server.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PeerToPeer\PeerToPeer.vcxproj">
+      <Project>{521c1409-91f1-4c5f-b29a-3958e869130a}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
