Dodata Hash mapa za klijenta Pocetak implementacije direktne komunikacije na klijentu

--- a/PeerToPeer/PeerToPeer.vcxproj.filters
+++ b/PeerToPeer/PeerToPeer.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="HashMap">
       <UniqueIdentifier>{e4d85d9e-4576-4909-bfd1-0cc8c78a1943}</UniqueIdentifier>
     </Filter>
+    <Filter Include="HashMapClient">
+      <UniqueIdentifier>{5df4b538-5be1-4040-a837-7d3364efbb49}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -27,6 +30,9 @@
     <ClInclude Include="HashMap.h">
       <Filter>HashMap</Filter>
     </ClInclude>
+    <ClInclude Include="HashMap_Client.h">
+      <Filter>HashMapClient</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PeerToPeer.cpp">
@@ -37,6 +43,9 @@
     </ClCompile>
     <ClCompile Include="HashMap.cpp">
       <Filter>HashMap</Filter>
+    </ClCompile>
+    <ClCompile Include="HashMap_Client.cpp">
+      <Filter>HashMapClient</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
