--- a/PeerToPeer/PeerToPeer.vcxproj
+++ b/PeerToPeer/PeerToPeer.vcxproj
@@ -153,10 +153,12 @@
   <ItemGroup>
     <ClInclude Include="framework.h" />
     <ClInclude Include="HashMap.h" />
+    <ClInclude Include="HashMap_Client.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HashMap.cpp" />
+    <ClCompile Include="HashMap_Client.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
